fieldx/tests/uncompilable/stable+sync,async-lock/deserialize_off.stderr
error: feature 'serde' is required
 --> tests/uncompilable/deserialize_off.rs
  |
  | #[fxstruct(sync, serde(deserialize(off)))]
  |                  ^^^^^

error[E0412]: cannot find type `Foo` in this scope
 --> tests/uncompilable/deserialize_off.rs
  |
  |     let _json = serde_json::from_str::<Foo>(r#"{"v": "whatever"}"#);
  |                                        ^^^ not found in this scope

warning: unused import: `serde::Deserialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::Deserialize;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `serde::Serialize`
 --> tests/uncompilable/deserialize_off.rs
  |
  | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^
